src/styles/home.css
body{
    padding-top: 80px;
}

.landing-page{
    position: relative;
    width: 100%;
    height: 664px;
    background-color: var(--darker-bg-color);
}

.img-display > img{
    width: 400px;
    height: 650px;
    object-fit: cover;
    position: absolute;
    right: 10%;
    top: 2%;
    animation: appear 5s ease ;
    animation-fill-mode: forwards;
}

.logo{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    text-align: center;
    position: absolute;
    top: 30%;
    left: 5%;
}

.logo > h2{
    color: var(--txt-color);
    animation: name 3s ;
    animation-fill-mode: forwards;
    margin: 0;
    font-size:45px;
}

.logo > p{
    color: var(--txt-color);
    animation : name 2s ease 3s;
    animation-fill-mode: forwards;
    margin: 0;
    font-size: 25px;
    letter-spacing: 5px;
    margin-left: 6px;
    opacity: 0;
}

.explore-btn{
    display: flex;
    align-items: center;
    justify-content: center;
}

.explore-btn:hover > button, 
.explore-btn > .arrow{
    transition: 1s ease;
}   

.explore-btn > button {
    border: none;
    padding: 10px 20px;
    border-radius: 6px;
    background-color: var(--btn-color);
    font-family: inherit;
    color: var(--darker-g-color);
    font-weight: 600;
    font-size: 17px;
    cursor: pointer;
}

.explore-btn:hover > button{
    transform: scale(1.1);
}

.arrow{
    font-size: 50px;
    color: var(--btn-color);
    margin-top: 5px;
    cursor: pointer;
}

.explore-btn:hover > .arrow{
    transform: translateY(15px);
}

@layer KEYFRAMES{

    @keyframes name{
        0%{
            opacity: 0;
        }

        100%{
            opacity: 1;
            transform: translateY(-50%);
        }
    }

    @keyframes logo {
        0%{scale: 0;}

        100%{transform: rotate(360deg);}
    }

    @keyframes floats{
        0%{ transform: translateY(0); }
        50%  { 
            transform: translateY(-5%); 
        }
        100% { transform: translateY(0); } 
    }

    @keyframes spin{
        0%{
            transform: rotateY(-360deg);
        }
        
        100%{
            transform: rotateY(360deg);
        }
    }

    @keyframes appear{
        from{
            opacity: 0;
        }
        to{
            opacity: 1;
        }
    }

}

